deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-service-registry
spec:
  selector:
    app: people-service-registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
